@@ -75,8 +75,11 @@ V8AbstractEventListener::V8AbstractEventListener(Frame* frame, PassRefPtr<V8List
 
 V8AbstractEventListener::~V8AbstractEventListener()
 {
-    if (!m_listener.IsEmpty())
-        V8EventListenerList::clearWrapper(m_listener, m_isAttribute);
+    if (!m_listener.IsEmpty()) {
+        v8::HandleScope scope;
+        v8::Local<v8::Object> listener = v8::Local<v8::Object>::New(m_listener);
+        V8EventListenerList::clearWrapper(listener, m_isAttribute);
+    }
     disposeListenerObject();
 }
 
